# CherryOJ

./: .gitignore  AGENTS.md  README.md  frontend-design.md  test.sh  前端视觉规范文档.md
.codex/: config.toml
cherry-judge/: CMakeLists.txt  README.md
cherry-judge/src/: CMakeLists.txt  main.cpp
cherry-judge/src/api/: CMakeLists.txt  HttpServer.cc  HttpServer.h  SubmissionService.cc  SubmissionService.h  http_server.cc  http_server.h
cherry-judge/src/app/: CMakeLists.txt  judge_pipeline.cc  judge_pipeline.h  submission_service.cc  submission_service.h  task_service.cc  task_service.h  webhook_client.cc  webhook_client.h
cherry-judge/src/cmd/: CMakeLists.txt  gateway_main.cc
cherry-judge/src/common/: CMakeLists.txt  Event.h  EventLoop.cc  EventLoop.h  EventQueue.cc  EventQueue.h  filesystem_utils.h  order_map.cpp  order_map.h
cherry-judge/src/common/event/: Event.h  EventLoop.cc  EventLoop.h  EventQueue.cc  EventQueue.h
cherry-judge/src/common/logger/: Logger.h
cherry-judge/src/config/: config.h
cherry-judge/src/dispatcher/: Dispatcher.cc  Dispatcher.h  WorkerLauncher.cc  main.cc
cherry-judge/src/domain/: CMakeLists.txt  compile_result.h  judge_result.h  judge_task.h  language.h  run_result.h  submission.h  test_case.h  verdict.h
cherry-judge/src/execution/: CMakeLists.txt  compiler.h  cpp_compiler.cc  cpp_compiler.h  cpp_runner.cc  cpp_runner.h  python_runner.cc  python_runner.h  runner.h
cherry-judge/src/infra/: CMakeLists.txt  process_executor.cc  process_executor.h  workspace_manager.cc  workspace_manager.h
cherry-judge/src/judge/: CMakeLists.txt  exact_match_checker.cc  exact_match_checker.h  judge_engine.cc  judge_engine.h  language.cpp  language.h  output_checker.h  result.cpp  result.h  solution.h
cherry-judge/src/logger/: Logger.h
cherry-judge/src/net/: CMakeLists.txt
cherry-judge/src/net/http/: HttpServer.cc  SubmissionService.h  main.cc
cherry-judge/src/queue/: CMakeLists.txt  in_memory_task_queue.cc  in_memory_task_queue.h  task_queue.h
cherry-judge/src/sandbox/: README.md  sandbox.cpp  sandbox.h  sandbox_fs.cpp  sandbox_fs.h  sandbox_helper.cpp  sandbox_manager.cpp  sandbox_manager.h  sandbox_ns.cpp  sandbox_ns.h  sandbox_path.h
cherry-judge/src/sandbox/mount/: builder.h  mount.h  mount_builder.h  mount_config.h  mount_director.h  mount_executer.h  mount_factory.h  mount_manager.cpp  mount_manager.h  mount_strategy.h  mount_validator.h
cherry-judge/src/sandbox/namespace/: namespace_manager.h
cherry-judge/src/sandbox/rootfs/: rootfs_manager.h
cherry-judge/src/store/: CMakeLists.txt  in_memory_result_store.cc  in_memory_result_store.h  in_memory_submission_store.cc  in_memory_submission_store.h  result_store.h  submission_store.h
cherry-judge/src/task/: input_source_type.h  task.h
cherry-judge/src/type/: Type.h
cherry-judge/src/types/: CMakeLists.txt  Type.h
cherry-judge/src/v2/: CMakeLists.txt
cherry-judge/src/v2/api/: judge_service.cc  judge_service.h
cherry-judge/src/v2/cmd/: phase1_demo_main.cc
cherry-judge/src/v2/compiler/: compile_executor.cc  compile_executor.h
cherry-judge/src/v2/infra/config/: judge_config.h
cherry-judge/src/v2/judge/: judge_engine.cc  judge_engine.h
cherry-judge/src/v2/model/: events.h  types.h
cherry-judge/src/v2/queue/: in_memory_task_queue.cc  in_memory_task_queue.h  task_queue.h
cherry-judge/src/v2/runner/: run_executor.cc  run_executor.h
cherry-judge/src/v2/sandbox/: sandbox_runtime.h
cherry-judge/src/v2/scheduler/: scheduler.cc  scheduler.h
cherry-judge/src/v2/worker/: worker_client.h  worker_daemon.cc  worker_daemon.h
cherry-judge/src/worker/: CMakeLists.txt  Worker.cc  Worker.h  WorkerManager.cc  WorkerManager.h  main.cc
cherry-judge/tests/: test_sandbox.cpp  test_sandbox_fs.cpp
cherry-server/: pom.xml
cherry-ui/: .env.example  package-lock.json  package.json  plan.md  pnpm-lock.yaml
cherry-web/: package-lock.json  (+1 more)
(+280 files in other folders)
